--- a/HW3/Base.lproj/Main.storyboard
+++ b/HW3/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Calc View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="HW3" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="CalcViewController" customModule="HW3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -25,7 +25,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter length in Meters" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="yEI-Nc-zsR" customClass="DecimalMinusTextField" customModule="HW3" customModuleProvider="target">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Or enter here" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="yEI-Nc-zsR" customClass="DecimalMinusTextField" customModule="HW3" customModuleProvider="target">
                                 <rect key="frame" x="16" y="130" width="157" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
@@ -47,14 +47,14 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Yards" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="npC-3s-KSc">
-                                <rect key="frame" x="181" y="83" width="43" height="21"/>
+                                <rect key="frame" x="181" y="83" width="178" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Meters" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sa9-y8-HhC">
-                                <rect key="frame" x="181" y="134" width="54" height="21"/>
+                                <rect key="frame" x="181" y="134" width="178" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -72,14 +72,10 @@
                                 <rect key="frame" x="320" y="167" width="39" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Mode"/>
+                                <connections>
+                                    <action selector="modeBtnPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wez-RB-yMO"/>
+                                </connections>
                             </button>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter length in Yards" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4rl-fl-JEp" customClass="DecimalMinusTextField" customModule="HW3" customModuleProvider="target">
-                                <rect key="frame" x="16" y="78" width="157" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="toX-QS-HdP">
                                 <rect key="frame" x="169" y="167" width="36" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -92,16 +88,29 @@
                                 <rect key="frame" x="155" y="617" width="65" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Settings"/>
+                                <connections>
+                                    <segue destination="Cqi-9F-rrf" kind="show" identifier="segueToSettings" id="czH-Nx-KKp"/>
+                                </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter here" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="4rl-fl-JEp" customClass="DecimalMinusTextField" customModule="HW3" customModuleProvider="target">
+                                <rect key="frame" x="16" y="78" width="157" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <connections>
+                        <outlet property="bottomInput" destination="yEI-Nc-zsR" id="rYu-B5-y0a"/>
+                        <outlet property="bottomUnit" destination="sa9-y8-HhC" id="krI-Rv-Rpa"/>
                         <outlet property="calcBtn" destination="kyA-hp-b5z" id="dEt-Ms-r0n"/>
                         <outlet property="clearBtn" destination="toX-QS-HdP" id="yGi-PW-Z8j"/>
-                        <outlet property="metersInput" destination="yEI-Nc-zsR" id="8ae-oq-gJU"/>
-                        <outlet property="yardsInput" destination="4rl-fl-JEp" id="PGi-fA-OCf"/>
+                        <outlet property="modeBtn" destination="UhB-rv-499" id="Oka-JB-qgt"/>
+                        <outlet property="topInput" destination="4rl-fl-JEp" id="SeD-Wa-0iJ"/>
+                        <outlet property="topUnit" destination="npC-3s-KSc" id="cZT-f9-BNb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -111,7 +120,7 @@
         <!--Settings-->
         <scene sceneID="G1H-gx-jfs">
             <objects>
-                <viewController id="osR-WJ-J0H" sceneMemberID="viewController">
+                <viewController id="osR-WJ-J0H" customClass="SettingsViewController" customModule="HW3" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xGl-Vo-Uj4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -131,7 +140,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="bah-N6-ldE">
-                                <rect key="frame" x="0.0" y="505" width="375" height="162"/>
+                                <rect key="frame" x="0.0" y="485" width="375" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
                         </subviews>
@@ -140,8 +149,18 @@
                     </view>
                     <navigationItem key="navigationItem" title="Settings" id="uSk-Ze-MKh">
                         <barButtonItem key="leftBarButtonItem" title="Cancel" id="PVD-eX-0HY"/>
-                        <barButtonItem key="rightBarButtonItem" title="Save" id="QFs-Vx-orc"/>
+                        <barButtonItem key="rightBarButtonItem" title="Save" id="QFs-Vx-orc">
+                            <connections>
+                                <action selector="saveBtnPressed:" destination="osR-WJ-J0H" id="TsK-aP-XBK"/>
+                                <segue destination="BYZ-38-t0r" kind="show" identifier="segueToCalc" id="FtC-aK-ubj"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="cancelBtn" destination="PVD-eX-0HY" id="KeP-RI-RIu"/>
+                        <outlet property="pickerView" destination="bah-N6-ldE" id="2Tz-Im-jn4"/>
+                        <outlet property="saveBtn" destination="QFs-Vx-orc" id="cOi-jg-xNV"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8u3-1a-sS2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
