--- a/HW3/Base.lproj/Main.storyboard
+++ b/HW3/Base.lproj/Main.storyboard
@@ -143,23 +143,52 @@
                                 <rect key="frame" x="0.0" y="485" width="375" height="162"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                             </pickerView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hMA-F1-Z6A">
+                                <rect key="frame" x="219" y="77" width="140" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Unit">
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="fromLabelPressed:" destination="osR-WJ-J0H" eventType="touchUpInside" id="1jp-DK-Buc"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R72-0s-fVl">
+                                <rect key="frame" x="219" y="106" width="140" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Unit">
+                                    <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="toLabelPressed:" destination="osR-WJ-J0H" eventType="touchUpInside" id="0yR-o6-QBK"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="drk-jx-Y1w"/>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem title="Item" id="FJZ-JU-uEa"/>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" title="Settings" id="uSk-Ze-MKh">
-                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="PVD-eX-0HY"/>
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="PVD-eX-0HY">
+                            <connections>
+                                <action selector="cancelButtonPressed:" destination="osR-WJ-J0H" id="3Rc-M8-NYA"/>
+                            </connections>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" title="Save" id="QFs-Vx-orc">
                             <connections>
                                 <action selector="saveBtnPressed:" destination="osR-WJ-J0H" id="TsK-aP-XBK"/>
-                                <segue destination="BYZ-38-t0r" kind="show" identifier="segueToCalc" id="FtC-aK-ubj"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="cancelBtn" destination="PVD-eX-0HY" id="KeP-RI-RIu"/>
-                        <outlet property="pickerView" destination="bah-N6-ldE" id="2Tz-Im-jn4"/>
+                        <outlet property="fromLabel" destination="hMA-F1-Z6A" id="o5I-C5-C0C"/>
+                        <outlet property="pickerView" destination="bah-N6-ldE" id="oGq-lZ-XOX"/>
                         <outlet property="saveBtn" destination="QFs-Vx-orc" id="cOi-jg-xNV"/>
+                        <outlet property="toLabel" destination="R72-0s-fVl" id="pVi-WO-1rY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8u3-1a-sS2" userLabel="First Responder" sceneMemberID="firstResponder"/>
